--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="module" src="/src/main.jsx" defer></script>
     <title>Vite + React</title>
   </head>
-  <body class="bg-cyan-400">
+  <body class="bg-cyan-400 overflow-x-hidden">
     <div id="root"></div>
   </body>
 </html>
